fix product count display oon mobile

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1874,6 +1874,13 @@ a {
   justify-content: space-between;
   align-items: center;
 }
+
+@media screen and (max-width: 522px){
+  .first-top {
+    flex-direction: column;
+    align-items: start;
+  }
+}
 .first-top .total-products {
   font-size: 1em;
   color: var(--grey);
